<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:textSize="@dimen/subheading"
        android:text="@string/prompt_high_bp"
        android:textColor="@color/cardview_background_green"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/prompt_graph_xaxis" />

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/grapg_xaxis_lable"
            android:gravity="start"
            android:text="@string/prompt_graph_xaxis"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/prompt_graph_yaxis" />
        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/grapg_yaxis_lable"
            android:gravity="start"
            android:text="@string/prompt_graph_xaxis"
            android:textStyle="italic"/>
    </LinearLayout>

    <lecho.lib.hellocharts.view.LineChartView
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />


</LinearLayout>